# Aetherial

./: ARCHITECTURE_NOTES.md  CMakeLists.txt  OPTIMIZATION_RECOMMENDATIONS.md  VULKAN_PIPELINE_FIXES.md  main.cpp  temp.txt  temp_old.cpp  vulkan_quad_test.cpp
.github/: copilot-instructions.md
assets/models/: grass3.glb  water.glb
docs/: BLOCK_TEXTURES.md  DISTANCE_LOD_IMPLEMENTATION.md  NO_VSYNC_STRATEGY.md  VULKAN_MIGRATION_PLAN.md
engine/: CMakeLists.txt  RenderConfig.h  pch.h
engine/Core/: ClientWorld.cpp  ClientWorld.h  GameClient.cpp  GameClient.h  GameServer.cpp  GameServer.h  GameState.cpp  GameState.h  ServerWorld.cpp  ServerWorld.h  SimulationState.cpp  SimulationState.h  Window.cpp  Window.h
engine/Culling/: Frustum.cpp  Frustum.h
engine/ECS/: ECS.cpp  ECS.h
engine/Input/: Camera.cpp  Camera.h  PlayerController.cpp  PlayerController.h
engine/Math/: Vec3.h
engine/Network/: IntegratedServer.cpp  NetworkClient.cpp  NetworkClient.h  NetworkManager.cpp  NetworkMessages.h  VoxelCompression.h
engine/Physics/: PhysicsSystem.cpp  PhysicsSystem.h
engine/Profiling/: GPUProfiler.cpp  GPUProfiler.h  Profiler.cpp  Profiler.h
engine/Rendering/: CascadedShadowMap.cpp  CascadedShadowMap.h  DeferredLightingPass.cpp  DeferredLightingPass.h  FluidDepthRenderer.cpp.backup  FluidParticleRenderer.cpp  FluidParticleRenderer.h  GBuffer.cpp  GBuffer.h  GLBModelRenderer.cpp  GLBModelRenderer.h  GPUMeshQueue.cpp  GPUMeshQueue.h  HDRFramebuffer.cpp  HDRFramebuffer.h  InstancedQuadRenderer.cpp  InstancedQuadRenderer.h  ModelInstanceRenderer.cpp  ModelInstanceRenderer.h  Parameters.h  PostProcessingPipeline.cpp  PostProcessingPipeline.h  ShadowBlur.cpp  ShadowBlur.h  SkyRenderer.cpp  SkyRenderer.h  SunRenderer.cpp  SunRenderer.h  TextureManager.cpp  TextureManager.h  VolumetricCloudRenderer.cpp  VolumetricCloudRenderer.h
engine/Rendering/Vulkan/: DynamicRenderingHelpers.h  VulkanBlockHighlighter.cpp  VulkanBlockHighlighter.h  VulkanBuffer.h  VulkanCloudRenderer.cpp  VulkanCloudRenderer.h  VulkanContext.cpp  VulkanContext.h  VulkanDeferred.cpp  VulkanDeferred.h  VulkanGBuffer.cpp  VulkanGBuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanLayoutTracker.h  VulkanLightingPass.cpp  VulkanLightingPass.h  VulkanMemoryAllocator.cpp  VulkanModelRenderer.cpp  VulkanModelRenderer.h  VulkanQuadRenderer.cpp  VulkanQuadRenderer.h  VulkanSSPR.cpp  VulkanSSPR.h  VulkanSSR.cpp  VulkanSSR.h  VulkanShadowMap.cpp  VulkanShadowMap.h  VulkanSkyRenderer.cpp  VulkanSkyRenderer.h  VulkanTriangleRenderer.cpp  VulkanTriangleRenderer.h
engine/Time/: DayNightController.cpp  DayNightController.h
engine/UI/: HUD.cpp  HUD.h
engine/World/: AsyncMeshGenerator.cpp  AsyncMeshGenerator.h  BiomeSystem.cpp  BiomeSystem.h  BlockDamageTracker.cpp  BlockDamageTracker.h  BlockProperties.h  BlockTextureMapping.h  BlockType.cpp  BlockType.h  ChunkConstants.h  ConnectivityAnalyzer.cpp  ConnectivityAnalyzer.h  ConnectivityTest.cpp  ElementRecipes.cpp  FluidComponents.h  FluidSystem.cpp  FluidSystem.h  IslandChunkSystem.cpp  IslandChunkSystem.h  MeshGenerationPool.h  TreeGenerator.cpp  TreeGenerator.h  VoronoiIslandPlacer.cpp  VoronoiIslandPlacer.h  VoxelChunk.cpp  VoxelChunk.h  VoxelRaycaster.cpp  VoxelRaycaster.h
libs/: CMakeLists.txt
scripts/: ai-friendly-build.ps1  compile_shaders.ps1  generate_block_textures.py  generate_cloud_noise.py  generate_water_block.py  package-release.ps1
shaders/: glb_depth_water.vert  glb_depth_wind.vert  glb_water.frag  glb_water.vert  glb_wind.frag  glb_wind.vert  postprocess.frag  quad_merge.comp
shaders/vulkan/: clouds.frag  clouds.vert  composite.frag  gbuffer.frag  gbuffer.vert  highlight.frag  highlight.vert  lighting.frag  lighting.vert  lighting_pass.frag  lighting_pass.vert  model_forward.frag  model_forward.vert  model_instance.frag  model_instance.vert  pbr_functions.glsl  quad.frag  quad.vert  quad_gbuffer.frag  quad_simple.frag  quad_vertex_pulling.vert  sky.frag  sky.vert  sspr.comp  ssr.comp
